Update with personal info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
       <div class="sidebar" id="sidebar">
         <div class="header">
           <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
-          <span class="tagline">A responsive Jekyll theme</span>
+          <h2 class = "username">Edith Shao</h2>
+          <span class="tagline">Blog for fun. Currently senior @ USC</span>
         </div>
         <div class="posts">
           <ul class="posts-list">
@@ -41,8 +42,8 @@
         <div class="footer">
           <span id="footer-links">
             <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">GitHub</a>
+            <a href="https://www.linkedin.com/in/ruyinshao/" class="footer-link">Linkedin</a> <span class="separator">&bull;</span>
+            <a href="https://github.com/EdithXDXD" class="footer-link">GitHub</a>
           </span>
         </div>
       </div>
