update personal info and intro blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
     <div class="site">
       <div class="sidebar" id="sidebar">
         <div class="header">
-          <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
-          <h2 class = "username">Edith Shao</h2>
+          <h1 class="title"><a href="/"><img id="logo" alt = "Avatar" src="/images/profile.jpeg"></a></h1>
+          <h3 class = "username">Edith Shao</h3>
           <span class="tagline">Blog for fun. Currently senior @ USC</span>
         </div>
         <div class="posts">
@@ -41,7 +41,7 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
+            <a href="2019-1-14-About-Me.md" class="footer-link">About</a> <span class="separator">&bull;</span>
             <a href="https://www.linkedin.com/in/ruyinshao/" class="footer-link">Linkedin</a> <span class="separator">&bull;</span>
             <a href="https://github.com/EdithXDXD" class="footer-link">GitHub</a>
           </span>
