--- a/_includes/post.html
+++ b/_includes/post.html
@@ -8,7 +8,7 @@
     </div>
     <div id="info-container">
       <h1 id="title">{{ page.title }}</h1>
-      <span id="date">{{ page.date | date_to_string }}</span>
+      <span id="post-date">Last modified at: {{ page.last_modified_at | date: '%B %-d %Y %R' }}</span>
     </div>
   </div>
 
