--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
             {% for post in site.posts %}
               <li class="post-link">
                 <a class="post-title" href="{{ post.url }}">
-                  <span class="post-date">{{ post.last_modified_at |  date_to_string }}</span>
+                  <span class="post-date">{{ post.date |  date_to_string }}</span>
                   {{ post.title }}
                 </a>
               </li>
